feat(ssp): SP 800-60 information type mapping with profile 1.4.0
